tests/errors/collections/dict_unhashable_keys.sad
# Dict unhashable keys test
risk {
    # Verify compile-time validation rejects list key
    d = { [1, 2]: "value" }
} trap IllegalOperationError e {
    show(e.message)
}
